--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,24 @@ html {
 }
 
 body {
+  margin: 2px;
+  line-height: 1.3;
+  padding-left: 1rem;
 }
 
 article {
-
+  border: 2px;
 }
-article header {
 
+article header {
+  color: #222;
+  font-family: "crimson text", sans-serif;
 }
 
 article h1 {
-
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
 }
 
 article header p {
@@ -25,15 +32,16 @@ article header p {
 }
 
 article p {
-
+  font-size: 1.125rem;
+  color: #999;
 }
 
-article ol{
-
+article ol {
+  line-height: 1.3;
 }
 
 blockquote {
-
+  color: #555;
 }
 
 .quote {
