--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,9 @@ html {
 }
 
 body {
-  margin: 2px;
+  margin: 10px 12px;
   line-height: 1.3;
-  padding-left: 1rem;
+  padding-left: 1em;
 }
 
 article {
@@ -18,7 +18,7 @@ article {
 
 article header {
   color: #222;
-  font-family: "crimson text", sans-serif;
+  font-family: "Crimson Text", sans-serif;
 }
 
 article h1 {
@@ -28,7 +28,7 @@ article h1 {
 }
 
 article header p {
-
+  font-style: italic;
 }
 
 article p {
@@ -45,5 +45,5 @@ blockquote {
 }
 
 .quote {
-
+  font-size: 1.125rem;
 }
