--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  border: 2px;
 }
 
 *, *::before, *::after {
@@ -7,7 +8,7 @@ html {
 }
 
 body {
-  margin: 10px 12px;
+  margin: 10px 12px 8px 6px;
   line-height: 1.3;
   padding-left: 1em;
 }
