--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
 
 body {
   margin: 10px 12px 8px 6px;
+  margin: 10px;
   line-height: 1.3;
   padding-left: 1em;
 }
@@ -30,6 +31,7 @@ article h1 {
 
 article header p {
   font-style: italic;
+  line-height: 1.3;
 }
 
 article p {
