--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ html {
 }
 
 body {
-  margin: 10px 12px 8px 6px;
-  margin: 2px;
+  margin: 10px 12px 8px;
   margin: 2px;
   line-height: 1.3;
   padding-left: 1em;
