--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
 
 body {
   margin: 0;
+  margin-top: 10px;
   line-height: 1.3;
   margin-bottom: 10px;
   padding-left: 1em;
@@ -31,6 +32,7 @@ article h1 {
 
 article header p {
   font-style: italic;
+  color: #555;
   line-height: 1.3;
 }
 
